--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  padding: 3rem 0;
+  padding: 3rem 2rem;
 
   &__site-name {
     font-size: 1.1rem;
