--- a/assets/scss/_some.scss
+++ b/assets/scss/_some.scss
@@ -3,7 +3,6 @@ html {
 	-webkit-font-smoothing: antialiased;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	-webkit-tap-highlight-color: transparent;
-	min-width: 320px;
 }
 
 body {
@@ -11,7 +10,6 @@ body {
 	line-height: 2.4rem;
     font-weight: 400;
 	color: $primary_color;
-	min-width: 32rem;
 }
 
 h2 {
